examples/test/testpolicy2447.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2447
  namespace: namespace266
spec:
  podSelector:
    matchLabels:
      key45: value26
      key30: value2
      key39: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value33
          key37: value8
      podSelector:
        matchLabels:
          key20: value48
